# yarp-devices-google-cloud

./: CMakeLists.txt  README.md
.github/workflows/: conda-ci.yml
src/devices/: CMakeLists.txt
src/devices/googleDialogflowCxChatBot/: CMakeLists.txt  GoogleDialogFlowCxChatBot.cpp  GoogleDialogFlowCxChatBot.h  GoogleDialogFlowCxChatBot_ParamsParser.cpp  GoogleDialogFlowCxChatBot_ParamsParser.h  GoogleDialogFlowCxChatBot_params.md
src/devices/googleDialogflowCxChatBot/tests/: CMakeLists.txt  googleDialogFlowCxChatBot_test.cpp  googleDialogflowCxChatBot_test.cpp  googleSpeechSynthesizer_test.cpp
src/devices/googleDialogflowCxChatBot/tests/try_and_debug/: launch.json  testDialog.xml
src/devices/googleSpeechSynthesizer/: CMakeLists.txt  GoogleSpeechSynthesizer.cpp  GoogleSpeechSynthesizer.h  GoogleSpeechSynthesizer_ParamsParser.cpp  GoogleSpeechSynthesizer_ParamsParser.h  GoogleSpeechSynthesizer_params.md
src/devices/googleSpeechSynthesizer/demos/: CMakeLists.txt
src/devices/googleSpeechSynthesizer/demos/yarprobotinterface_xml/: baseSynthesisConfig.xml
src/devices/googleSpeechSynthesizer/tests/: googleSpeechSynthesizer_test.cpp
src/devices/googleSpeechTranscription/: CMakeLists.txt  GoogleSpeechTranscription.cpp  GoogleSpeechTranscription.h  GoogleSpeechTranscription_ParamsParser.cpp  GoogleSpeechTranscription_ParamsParser.h  GoogleSpeechTranscription_params.md
src/devices/googleSpeechTranscription/demos/: CMakeLists.txt
src/devices/googleSpeechTranscription/demos/yarprobotinterface_xml/: baseTranscriptionConfig.xml
src/devices/googleSpeechTranscription/tests/: CMakeLists.txt  googleSpeechSynthesizer_test.cpp  googleSpeechTranscription_test.cpp
